objects/Team_Membership__c.object
<CustomObject>
    <description>This object holds the relationship between the Staff member, Institution, and Assignment Role, as well as defining the effective dates associated with the SA.</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <description>Created for CR-20150908-9224.</description>
        <formula>IF(!ISBLANK(Opportunity__c) ,
 HYPERLINK(&apos;/&apos;+Opportunity__c,  Opportunity__r.Name ),
 IF(!ISBLANK( Project__c ) ,
  HYPERLINK(&apos;/&apos;+Project__c ,  Project__r.Name  ),
  IF(!ISBLANK(  Membership__c  ) ,
   HYPERLINK(&apos;/&apos;+Membership__c  ,  Membership__r.Name ),
   HYPERLINK(&apos;/&apos;+ Institution__c ,  Institution__r.Name )
  )
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Describes the type of record supported by this staff assignment.</inlineHelpText>
        <label>Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>Cn{0}</displayFormat>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <label>Role End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <label>Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Staff Assignments</relationshipLabel>
        <relationshipName>Team_Memberships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Membership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR-20150908-9224.</description>
        <label>Membership</label>
        <referenceTo>Membership__c</referenceTo>
        <relationshipLabel>Staff Assignments</relationshipLabel>
        <relationshipName>Staff_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Updated for the CR-20150908-9224.</description>
        <label>Opportunity</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Southwind</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Staff Assignments</relationshipLabel>
        <relationshipName>Staff_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Perspectives__c</fullName>
        <label>Current Program Responsibilities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR-20150908-9224.</description>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Staff Assignments</relationshipLabel>
        <relationshipName>Staff_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment Role</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND ((2 AND 3) OR (4 AND 5) OR ((6 OR 10) AND 7) OR (8 AND 9))</booleanFilter>
            <filterItems>
                <field>Team_Role__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Opportunity</value>
            </filterItems>
            <filterItems>
                <field>Team_Role__c.Opportunity__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Membership</value>
            </filterItems>
            <filterItems>
                <field>Team_Role__c.Membership__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Assigned</value>
            </filterItems>
            <filterItems>
                <field>Team_Role__c.Institution__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Project</value>
            </filterItems>
            <filterItems>
                <field>Team_Role__c.Project__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Default</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Team_Role__c</referenceTo>
        <relationshipLabel>Staff Assignments</relationshipLabel>
        <relationshipName>Team_Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Staff_member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Member</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Employee_User_Record__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Contact.Employee_User_Record__r.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Staff Assignments</relationshipLabel>
        <relationshipName>Staff_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Role Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( 
	AND( 
		Start_date__c &lt;= TODAY(),
		OR(
			ISNULL(End_date__c),
			End_date__c &gt;= TODAY() 
		)
	), 
	&apos;Active&apos;, 
	&apos;Inactive&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Represents the Sales Segment for Institutions</inlineHelpText>
        <label>Group</label>
        <referenceTo>Team_Segment__c</referenceTo>
        <relationshipLabel>Staff Assignments</relationshipLabel>
        <relationshipName>Team_Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Staff Assignment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staff Assignments</pluralLabel>
    <recordTypes>
        <fullName>Assigned</fullName>
        <active>true</active>
        <description>Automatically assigned upon save</description>
        <label>Assigned</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <description>Every record starts here</description>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>Membership</fullName>
        <active>true</active>
        <description>Relates to a Membership for a given Institution</description>
        <label>Membership</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opportunity_Staff_Assignments</fullName>
        <active>true</active>
        <description>Relates to an Opportunity for a given Institution</description>
        <label>Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project</fullName>
        <active>true</active>
        <description>Relates to a Project for a given Institution</description>
        <label>Project</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Membership_Required</fullName>
        <active>true</active>
        <description>Created for CR-20150908-9224.</description>
        <errorConditionFormula>AND( 
RecordType.DeveloperName == &apos;Membership&apos;, 
ISBLANK(Membership__c) 
)</errorConditionFormula>
        <errorDisplayField>Membership__c</errorDisplayField>
        <errorMessage>You must identify a Membership</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Required</fullName>
        <active>true</active>
        <description>Created for CR-20150908-9224.</description>
        <errorConditionFormula>AND(
 RecordType.DeveloperName == &apos;Opportunity_Staff_Assignments&apos;,
 ISBLANK(Opportunity__c )
)</errorConditionFormula>
        <errorDisplayField>Opportunity__c</errorDisplayField>
        <errorMessage>You must identify an Opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Required</fullName>
        <active>true</active>
        <description>Created for CR-20150908-9224.</description>
        <errorConditionFormula>AND( 
 RecordType.DeveloperName == &apos;Project&apos;, 
 ISBLANK(Project__c ) 
)</errorConditionFormula>
        <errorDisplayField>Project__c</errorDisplayField>
        <errorMessage>You must identify a Project</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_dates</fullName>
        <active>true</active>
        <errorConditionFormula>End_date__c &lt; Start_date__c</errorConditionFormula>
        <errorDisplayField>Start_date__c</errorDisplayField>
        <errorMessage>The Start date cannot be later than the End date.</errorMessage>
    </validationRules>
</CustomObject>